Refactor: -change server to app -create separate file for express dependencies -add bootstrap folder to handle bootstrapping in HTTP layer -move models to database folder -change repositories to stores

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "crud_app",
   "version": "1.0.0",
-  "description": "TODO crud application with express and mongodb",
+  "description": "TODO app",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon ./Bin/www.js"
   },
   "keywords": [
     "crud",
