--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "crud_app",
   "version": "1.0.0",
   "description": "TODO app",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./Bin/www.js"
+    "start": "nodemon Bin/www.ts"
   },
   "keywords": [
     "crud",
@@ -16,6 +17,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
@@ -23,6 +25,11 @@
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
+    "typescript": "^4.2.4",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^15.0.1"
   }
 }
