--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon Bin/www.ts"
+    "start": "nodemon Bin/www.ts r"
   },
   "keywords": [
     "crud",
@@ -17,6 +17,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "bunyan": "^1.8.15",
+    "commander": "^7.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
