--- a/package.json
+++ b/package.json
@@ -24,14 +24,21 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "googleapis": "^80.0.0",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
-    "typescript": "^4.2.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/node": "^15.0.1"
+    "@types/node": "^15.0.1",
+    "bcrypt": "^5.0.1",
+    "common-env": "^6.4.0",
+    "gaxios": "^4.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "sequelize": "^6.6.4",
+    "ts-node": "5.0.1",
+    "typescript": "^4.3.5"
   }
 }
