--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.1",
     "googleapis": "^80.0.0",
     "mongoose": "^5.10.11",
+    "mongoose-data-seed": "^2.1.6",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "uuid": "^8.3.2"
@@ -35,10 +36,14 @@
     "@types/node": "^15.0.1",
     "bcrypt": "^5.0.1",
     "common-env": "^6.4.0",
+    "faker": "^5.5.3",
     "gaxios": "^4.3.0",
     "jsonwebtoken": "^8.5.1",
     "sequelize": "^6.6.4",
     "ts-node": "5.0.1",
     "typescript": "^4.3.5"
+  },
+  "mdSeed": {
+    "seedersFolder": "./App/Infrastructure/seeders"
   }
 }
